--- a/package.json
+++ b/package.json
@@ -4,9 +4,19 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start:host": "ng serve --host 0.0.0.0",
     "build": "ng build",
+    "build:prod": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    
+    "docker:build": "docker build -t henna-frontend .",
+    "docker:run": "docker run -p 8080:80 henna-frontend",
+    "docker:up": "docker-compose up",
+    "docker:up:build": "docker-compose up --build",
+    "docker:down": "docker-compose down",
+    "docker:logs": "docker-compose logs -f frontend",
+    "format": "prettier --write \"src/**/*.{ts,html,scss}\""
   },
   "prettier": {
     "printWidth": 100,
