--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "docker:up:build": "docker-compose up --build",
     "docker:down": "docker-compose down",
     "docker:logs": "docker-compose logs -f frontend",
-    "format": "prettier --write \"src/**/*.{ts,html,scss}\""
+    "format": "prettier --write \"src/**/*.{ts,html,scss}\"",
+    "lint": "ng lint"
   },
   "prettier": {
     "printWidth": 100,
@@ -48,12 +49,16 @@
     "@angular/build": "^21.0.3",
     "@angular/cli": "^21.0.3",
     "@angular/compiler-cli": "^21.0.0",
+    "@eslint/js": "^9.39.2",
     "@tailwindcss/cli": "^4.1.18",
+    "angular-eslint": "21.1.0",
     "autoprefixer": "^10.4.23",
+    "eslint": "^9.39.1",
     "jsdom": "^27.1.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.9.2",
+    "typescript-eslint": "8.47.0",
     "vitest": "^4.0.8"
   }
 }
